# Edge-Predict-Model

./: .gitignore  PLAN.md  README.md
apps/api/: .env.example  README.md  pyproject.toml
apps/api/app/: __init__.py  config.py  main.py
apps/api/app/api/: __init__.py  routes_analyze.py  routes_performance.py  routes_picks.py
apps/api/app/core/: __init__.py  clv.py  devig.py  ev.py  kelly.py
apps/api/app/db/: __init__.py  engine.py
apps/api/app/features/: __init__.py  builder.py  lineup.py  offense.py  transactions.py
apps/api/app/ingestion/: __init__.py  mlb_client.py  odds_client.py  parsers.py  store.py
apps/api/app/jobs/: __init__.py  apply_migration.py  audit_snapshots.py  backfill_pitching.py  backfill_results.py  repair_orphan_events.py  snapshot_odds.py  sync_lineups.py  sync_schedule.py  sync_transactions.py  train_f1.py
apps/api/app/ml/: __init__.py  dataset.py  train.py
apps/api/app/picks/: __init__.py  logger.py
apps/api/tests/: conftest.py  test_audit.py  test_backfill.py  test_clv.py  test_devig.py  test_ev.py  test_features.py  test_ingestion_db.py  test_kelly.py  test_ml.py  test_odds_identity.py  test_parsers.py  test_pitching_db.py  test_repair_orphans.py  test_transactions_features.py
apps/api/tests/fixtures/: mlb_boxscore.json  mlb_schedule.json  mlb_schedule_results.json  mlb_transactions.json  odds_api_event_f5.json  odds_api_mlb.json
docs/: 00-decisiones.md  01-propuesta-tecnica.md  02-fuentes-de-datos.md  03-modelo-de-datos.md  04-features-y-modelos.md  05-motor-ev-y-bankroll.md  06-backtesting-y-metricas.md  07-roadmap.md
(+23 files in other folders)
