[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "edge-api"
version = "0.1.0"
description = "EDGE API - quantitative decision engine for sports betting (informational only, does not place bets)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
# Training/evaluation stack (F1). Kept out of the base install so the API
# runtime and the ingestion crons stay light.
ml = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.4",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Make the local `app` package importable without installing it.
pythonpath = ["."]
markers = [
    "integration: needs Postgres with infra/schema.sql applied (EDGE_TEST_DATABASE_URL)",
]
